# marketing_ai_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  coverage.xml  main.py  pyproject.toml
brands/goodpods/: config.yaml
brands/warming/: config.yaml
configs/: subjects_to_subreddits.yaml  subreddit_policies.yaml
courses/addiction-and-recovery/: addiction-and-recovery.json  course.txt  episodes.txt  plan.txt  results.txt
courses/art-of-negotiation/: art-of-negotiation.json  course.txt  episodes.txt  plan.txt  results.txt
courses/biohacking/: biohacking.json  course.txt  episodes.txt  plan.txt  results.txt
courses/creative-thinking/: course.txt  creative-thinking.json  episodes.txt  plan.txt  results.txt
courses/crypto-decrypted/: course.txt  crypto-decrypted.json  episodes.txt  plan.txt  results.txt
courses/dream-career/: course.txt  dream-career.json  episodes.txt  plan.txt  results.txt
courses/emotional-intelligence/: course.txt  emotional-intelligence.json  episodes.txt  plan.txt  results.txt
courses/future-of-humanity/: course.txt  episodes.txt  future-of-humanity.json  plan.txt  results.txt
courses/health-and-longevity/: course.txt  episodes.txt  health-and-longevity.json  plan.txt  results.txt
courses/how-does-ai-work/: course.txt  episodes.txt  evaluation.md  how-does-ai-work.json  plan.txt
courses/how-to-parent-early-years/: course.txt  episodes.txt  how-to-parent-early-years.json  plan.txt  results.txt
courses/leadership-that-inspires/: course.txt  episodes.txt  leadership-that-inspires.json  plan.txt
courses/marketing-like-a-boss/: course.txt  episodes.txt  marketing-like-a-boss.json  plan.txt  results.txt
courses/mastering-habits/: course.txt  episodes.txt  mastering-habits.json  plan.txt  results.txt
courses/meditation-mindfulness/: course.txt  episodes.txt  meditation-mindfulness.json  plan.txt  results.txt
courses/money-and-markets/: course.txt  episodes.txt  money-and-markets.json  plan.txt  results.txt
courses/myths-that-shaped-civilizations/: FINAL_RECOMMENDATION.md  course.txt  episodes.txt  myths-that-shaped-civilizations.json  plan.txt  results.txt
courses/nutrition/: course.txt  episodes.txt  nutrition.json  plan.txt  results.txt
courses/personal-branding/: QA-VERIFICATION.txt  course.txt  episodes.txt  personal-branding.json  plan.txt  results.txt
courses/personal-finances/: course.txt  episodes.txt  personal-finances.json  plan.txt  results.txt
courses/philosophy-fundamentals/: course.txt  episodes.txt  philosophy-fundamentals.json  plan.txt  results.txt
courses/product-market-fit/: episodes.txt  plan.txt  product-market-fit.json  results.txt
courses/psychology-of-decision-making/: course.txt  episodes.txt  plan.txt  psychology-of-decision-making.json  results.txt
courses/psychology-of-happiness/: course.txt  episodes.txt  plan.txt  psychology-of-happiness.json  results.txt
courses/science-and-art-of-sex/: course.txt  episodes.txt  plan.txt  results.txt  (+1 more)
docs/: HUMAN_RESPONSES_UPDATE.md  RAG_SYSTEM_SUMMARY.md  project_tree.txt
documents/: project_summary.md
scripts/: debug_env.py  debug_model_config.py  demo_config_fixed.py  demo_discovery.py  demo_discovery_mock.py  demo_rag_enhanced.py  demo_warming_system.py  generate_project_tree.py  index_brand_knowledge.py  setup_rag.sh  test_account_health.py  test_auto_posting.py  test_claude_models.py  test_comment_generation_auto.py  test_end_to_end_dry_run.py  test_end_to_end_rag.py  test_engagement_preview.py  test_human_responses.py  test_interactive_fixed.py  test_promotional_detailed.py  test_promotional_quick.py  test_rag.py  test_reddit_rules_rag.py  test_single_comment.py  test_step_by_step.py  test_system.py  test_validation_only.py  validate_subjects_and_policies.py
src/: __init__.py  models.py  orchestrator.py
src/llm/: client.py  (+2 more)
tests/: __init__.py  conftest.py  test_models.py
(+78 files in other folders)
